# gherkin-cpp-container

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  get-winsdk.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
